[tool.poetry]
name = "red_queen"
version = "1.0.0"
description = "A portfolio/blog website project for articles creation and registration"
authors = ["Ralph Souza"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
pytest = "^7.2.0"
unittest = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
